eks-infra-terraform/apps-examples/tls-deifops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-tls
  namespace: default
  labels:
    app: hello-world-tls
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-tls
  template:
    metadata:
      labels:
        app: hello-world-tls
    spec:
      containers:
      - name: nginx
        image: alexwhen/docker-2048
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-tls-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello-world-tls
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-tls-ingress
  namespace: default
  annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
      external-dns.alpha.kubernetes.io/hostname: 2048.deifops.click
      # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: alb
  rules:
  - host: 2048.deifops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-tls-svc
            port:
              number: 80
---
# apiVersion: cert-manager.io/v1
# kind: ClusterIssuer
# metadata:
#   name: letsencrypt-prod
# spec:
#   acme:
#     email: mohamed.aboudeif@outlook.com
#     server: https://acme-v02.api.letsencrypt.org/directory
#     privateKeySecretRef:
#       name: letsencrypt-prod
#     solvers:
#     - http01:
#         ingress:
#           class: alb
